--- a/wiki/Compiling.wiki
+++ b/wiki/Compiling.wiki
@@ -3,12 +3,12 @@
 
 = Introduction =
 
-With minpspsdk having so many dependency issues depending on the version, here's a quick guide how to compile with it.
+With minpspsdk having so many dependency issues depending on the version, here's a quick guide explaining how to compile with it.
 
 
 = Compiling =
 
-  * To compile with minpspsdk, first get a copy of *minpspsdk 0.10.0*, as most other versions seem to throw dependency errors.
+  * To compile with minpspsdk, first get a copy of *[http://www.jetdrone.com/minpspw minpspsdk 0.10.0]*, as most other versions seem to throw dependency errors.
   * Uninstall all existing minpspsdk version, and install version 0.10.0
   * In common.h, make sure one of #define TN_CFW / #define VHBL defines is uncommented, to choose one compile mode
   * Compile with command "make 3xx" in the "[...]/project/yMenu/" folder
